# template-fragments-py

./: .gitignore  License.md  Readme.md  minidoc.py  pyproject.toml  x.py
.github/workflows/: release.yml  test.yml
specs/: errors.toml  example.toml  generate_tests.py  repeated_fragment.toml
src/template_fragments/: __init__.py  _base.py  jinja.py
tests/: test_errors.py  test_example.py  test_generated.py  test_repeated_fragments.py  test_split_path.py
tests/flask/: test_app.py
tests/flask/templates/: index.html
