[project]
name = "template-fragments"
version = "23.6.0"
authors = [{ name = "Christopher Prohm", email = "mail@cprohm.de" }]
description = "Template fragments for jinja-like engines"
readme  = "Readme.md"
license = {text = "MIT"}

classifiers = []
requires-python = ">=3.8"
dependencies = []

[project.urls]
Repository = "https://github.com/chmp/template-fragments-py"

[project.optional-dependencies]
jinja = ["jinja2"]
dev = ["build", "black", "ruff", "jinja2", "pytest", "flask"]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]  
include = ["template_fragments"]
